k8s/server-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: server-deployment
spec:
    replicas: 3
    selector:
        matchLabels:
            component: server #could be anything eg partOfApp: whatever
    template:
        metadata:
            labels:
                component: server #must match up with the spec above
        spec:
            containers:
                - name: server
                  image: stephengrider/multi-server
                  ports:
                      - containerPort: 5000
